# learn-opengl

./: .gitignore  CMakeLists.txt  README.md
include/: IndexBuffer.h  Renderer.h  Shader.h  VertexBuffer.h
res/shaders/: basic.frag  basic.glsl  basic.shader
src/: IndexBuffer.cpp  Main.cpp  Renderer.cpp  Shader.cpp  VertexBuffer.cpp  main.c  main.cpp
